src/objects/E2_Practice_Skills_Mappings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to store resource request  primary skill based on resource practice.</description>
    <fields>
        <fullName>Skill_Id__c</fullName>
        <description>Primary skill from Skill and Certifications records (pse__Skill__c)</description>
        <inlineHelpText>Primary skill from Skill and Certifications records (pse__Skill__c)</inlineHelpText>
        <label>Skill Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <description>Primary skill name mapped with practice.</description>
        <inlineHelpText>Primary skill name mapped with practice.</inlineHelpText>
        <label>Skill Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Type__c</fullName>
        <description>Primary practice type from skill/certificate records</description>
        <inlineHelpText>Primary practice type from skill/certificate records</inlineHelpText>
        <label>Skill Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>E2 Practice Skills Mappings</label>
</CustomObject>